refactor(auth): replace SimpleGrantedAuthority with UserRole model
Refactor JWT authentication to use the custom UserRole enum instead of
Spring's SimpleGrantedAuthority. This change simplifies role handling by
directly mapping JWT claims to UserRole objects, eliminating the need for
string manipulation and "ROLE_" prefixing.

Also update the authorization check in AuthController to compare UUID
directly with the authentication principal instead of converting to string.