@@ -2,7 +2,7 @@ package org.example.domain.service;
 
 import io.jsonwebtoken.Claims;
 import org.example.domain.model.JwtAuthentication;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.example.domain.model.UserRole;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -16,14 +16,11 @@ public class JwtUtil {
 
         UUID id = UUID.fromString(claims.getSubject());
         Object rolesObj = claims.get("roles");
-        List<String> roles = rolesObj instanceof List
+        List<UserRole> authorities = rolesObj instanceof List
                 ? ((List<?>) rolesObj).stream()
-                  .map(Object::toString)
-                  .toList()
+                  .map(role -> UserRole.valueOf(role.toString()))
+                  .collect(Collectors.toList())
                 : List.of();
-        List<SimpleGrantedAuthority> authorities = roles.stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                .collect(Collectors.toList());
         return new JwtAuthentication(id, authorities, true);
     }
 }
